[Core] Enhance OpenAI Resource Management with Common Interfaces and Status Tracking
[Core] Enhance OpenAI Resource Management with Common Interfaces and Status Tracking

Squashed commit of the following:

commit d5c2f6e4ae0154d06e574bb332fd5dda635127f9
Author: Simo Lin <simo.lin@oracle.com>
Date:   Mon Feb 24 00:18:02 2025 -0800

    [Core] Add common interface for organization scope and project scope, consolidate project/scvacct controllers and update status
